--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Prediction Result</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <div class="container">
+        <h1 class="title">PREDICTION RESULT</h1>
+        
+        <div class="prediction-result">
+            🏆 Final Prediction: {{ result.final_prediction }}
+        </div>
+        
+        <div class="plot-container">
+            {{ result.plot_html|safe }}
+        </div>
+        
+        <div class="historical-probs">
+            {{ result.hist_prob_html|safe }}
+        </div>
+        
+        <a href="{{ url_for('index') }}" class="btn">Make Another Prediction</a>
+    </div>
+</body>
+</html>
